--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typechain": "^8.1.0"
   },
   "dependencies": {
+    "@charged-particles/protocol-subgraph": "^1.3.20",
     "@openzeppelin/contracts": "^4.7.2",
     "dotenv": "^16.0.1"
   }
