--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "@charged-particles/protocol-subgraph": "^1.3.20",
     "@openzeppelin/contracts": "^4.7.2",
     "dotenv": "^16.0.1"
+  },
+  "scripts": {
+    "test": "npx hardhat test",
+    "dev": "gatsby develop"
   }
 }
